--- a/Client/src/components/Attraction.module.css
+++ b/Client/src/components/Attraction.module.css
@@ -1,6 +1,6 @@
 .figure {
-  height: 140px;
-  width: 100%;
+  height: 150px;
+  width: 270px;
   border-radius: var(--border-radius-sm);
   overflow: hidden;
   padding: 0;
