--- a/Client/src/components/CityItem.module.css
+++ b/Client/src/components/CityItem.module.css
@@ -8,6 +8,7 @@
   padding: 5px;
   transition: all 0.3s;
   background-color: whitesmoke;
+  background-color: white;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 .CityItem:hover {
@@ -17,6 +18,7 @@
   transform: scale(1.01);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   background-color: var(--color-grey-1);
+  transform: translateX(-10px);
 }
 .cityname {
   text-transform: capitalize;
@@ -57,6 +59,7 @@
   font-size: 1rem;
 }
 .active {
-  background-color: var(--color-grey-1);
+  /* background-color: var(--color-grey-1); */
+  /* transform: translateX(-10px); */
   border: 1px solid var(--color-blue);
 }
