--- a/Client/src/components/Notes.module.css
+++ b/Client/src/components/Notes.module.css
@@ -1,16 +1,21 @@
 .form {
   background-color: pink;
+  background-color: white;
+  color: var(--color-blue);
   grid-row: 2;
   grid-column: 1/-1;
   display: flex;
   flex-direction: column;
   border-radius: 7px;
+  font-weight: 500;
 }
 .form textarea {
   outline: none;
   border-radius: 7px;
   border: none;
   height: 100px;
+  border: 1px solid black;
+  color: var(--color-blue);
 }
 .form label {
   font-size: 14px;
