--- a/Client/src/components/SearchBar.module.css
+++ b/Client/src/components/SearchBar.module.css
@@ -4,7 +4,7 @@
   font-size: var(--font-size-sm);
   cursor: pointer;
   outline: none;
-  border: 1px solid black;
+  border: 1px solid #fff;
   color: var(--color-blue);
   /* border-radius: var(--border-radius-md); */
   border-radius: 50px;
@@ -14,8 +14,8 @@
   margin: 0;
 }
 .input:focus {
-  border: 1px solid var(--color-blue);
-  width: 300px;
+  border: 1px solid #fff;
+  width: 320px;
   box-shadow: 7px 7px 14px rgba(0, 0, 0, 0.2);
   /* margin-left: 75px; */
   /* border-radius: var(--border-radius-lg); */
@@ -29,12 +29,12 @@
   color: var(--color-black);
 }
 .selection {
-  /* background-color: yellow; */
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: var(--border-radius-md);
   padding: 4px 7px;
   font-size: var(--font-size-sm);
   color: var(--color-blue);
+  background-color: #fff;
   cursor: pointer;
 }
 .selection:focus {
@@ -47,30 +47,46 @@
   margin-left: 75px;
 }
 .form {
+  background-color: yellow;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  border-bottom: 1px solid black;
-  border-right: 2px solid var(--color-black);
   position: relative;
   /* position: sticky; */
   z-index: 100;
   position: absolute;
-  width: 40%;
-  top: 0;
-  left: 0;
-  background-color: white;
+  width: 35rem;
+  border-radius: 20px;
+  border: none;
+  /* border-bottom: 1px solid black; */
+  /* border-right: 2px solid var(--color-black); */
+  top: 7px;
+  transform: translateX(-50%);
+  left: 50%;
+  /* background-color: white; */
+  background-color: var(--color-blue);
 }
 .icon {
   padding: 0;
   margin: 0;
   box-sizing: content-box;
-  color: var(--color-blue);
+  color: #fff;
   height: 1rem;
   width: 1rem;
   /* font-weight: 500; */
-  position: absolute;
+  /* position: absolute;
   top: 36%;
-  left: 17%;
+  left: 17%; */
+}
+.outBox {
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  color: transparent;
+  border-bottom: 1px solid black;
 }
