--- a/Client/src/pages/Travel.module.css
+++ b/Client/src/pages/Travel.module.css
@@ -7,7 +7,7 @@
   height: 92vh;
   position: relative;
   /* transform: translateY(-2%); */
-  /* background-color: pink; */
+  background-color: white;
   padding: 0;
   margin: 0;
   /* padding-top: 10px; */
@@ -16,14 +16,15 @@
   /* border-radius: var(--border-radius-lg); */
   box-shadow: 5px 5px 10px hsla(0, 0%, 0%, 0.067);
   border: 3px solid var(--color-white);
-  flex-basis: 60%;
+  flex-basis: 90%;
   background-color: #fff;
+  background-color: purple;
   height: 100%;
   position: relative;
 }
 .btns {
   position: absolute;
-  top: 4.5%;
+  bottom: 4.5%;
   left: 52%;
   display: flex;
   gap: 10px;
@@ -56,4 +57,93 @@
   width: 1rem;
   padding: 0;
   color: var(--color-white);
+}
+
+:global(.leaflet-popup-content-wrapper) {
+  /* background-color: purple; */
+  /* padding: 3px; */
+  transition: all 0.3s;
+
+  animation: popup 0.3s ease-in;
+
+  transform-origin: bottom;
+  margin: 0;
+  padding: 0;
+}
+
+:global(.leaflet-popup-content) {
+  /* background-color: purple; */
+  border-left: 3px solid var(--color-blue);
+  font-family: "Nunito", sans-serif;
+  margin: 0;
+  padding: 0;
+  /* font-size: 0.6rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+:global(.leaflet-popup-content span) {
+  padding: 0;
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 700;
+}
+@keyframes popup {
+  0% {
+    transform: scale(0.2);
+  }
+  100% {
+    /* transform: scale(1.3); */
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    /* transform: scale(1.3); */
+    opacity: 1;
+  }
+}
+
+:global(.leaflet-popup-content div) {
+  /* font-size: 0.6rem; */
+}
+:global(.leaflet-popup-tip) {
+  animation: popup 0.3s ease-in;
+}
+
+:global(.leaflet-container a.leaflet-popup-close-button) {
+  color: var(--color-blue);
+  font-size: 1rem;
+  height: 100px;
+  width: 300px;
+  /* not working for some reason */
+}
+:global(.leaflet-marker-icon) {
+  animation: fadeIn 0.3s ease-in;
+  transform-origin: bottom;
+  /* box-shadow: none; */
+}
+:global(.leaflet-control-zoom) {
+  padding: 0;
+  margin: 0;
+}
+:global(.leaflet-control-zoom-in) {
+  padding: 0;
+}
+:global(.leaflet-control-zoom-out) {
+  padding: 0;
+}
+:global(.leaflet-left) {
+  display: none;
+}
+:global(
+    .leaflet-container.leaflet-touch.leaflet-retina.leaflet-fade-anim.leaflet-grab.leaflet-touch-drag.leaflet-touch-zoom
+  ) {
+  height: 90%;
+  width: 90%;
+  border-radius: 13px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.05);
 }
