--- a/Client/src/components/Liked.module.css
+++ b/Client/src/components/Liked.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 1rem;
   height: 92vh;
-  /* background-color: #fff; */
+  /* background-color: yellow; */
 }
 .head {
   padding: 1rem 0;
