--- a/Client/src/components/Reviews.module.css
+++ b/Client/src/components/Reviews.module.css
@@ -10,6 +10,7 @@
   border: 1px solid var(--color-black); */
   /* this is the new styling */
   background-color: #fff;
+  background-color: whitesmoke;
   height: 92vh;
   overflow: scroll;
   padding: 1rem;
@@ -18,7 +19,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 7px;
+  /* overflow: scroll; */
 }
 .addReview {
   font-size: 0.8rem;
@@ -58,4 +60,19 @@
   font-size: 1.2rem;
   text-transform: capitalize;
   font-weight: 500;
+  /* margin-left: 6%; */
+}
+.icon {
+  height: 1rem;
+  width: 1rem;
+  padding: 0;
+  color: var(--color-white);
+  font-weight: 500;
+}
+.backbtn {
+  cursor: pointer;
+  padding: 2px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: var(--color-blue);
 }
