--- a/Client/src/components/MyReviews.module.css
+++ b/Client/src/components/MyReviews.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   gap: 1rem;
   height: 92vh;
-  /* overflow-y: scroll; */
+  overflow: scroll;
 }
 .myreviews h1 {
   /* align-self: start; */
