--- a/Client/src/components/Notes.module.css
+++ b/Client/src/components/Notes.module.css
@@ -30,4 +30,6 @@
   transition: all 0.3s;
   cursor: pointer;
   text-transform: capitalize;
+  background-color: var(--color-blue);
+  color: white;
 }
