--- a/Client/src/components/Attraction.module.css
+++ b/Client/src/components/Attraction.module.css
@@ -40,3 +40,15 @@
   stroke: aqua;
   stroke-width: 20px;
 } */
+@media only screen and (max-width: 500px) {
+  .attraction {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and (max-width: 310px) {
+  /* .attraction div {
+    padding: 0px;
+    margin: 0;
+  } */
+}
