--- a/Client/src/components/AttractionItem.module.css
+++ b/Client/src/components/AttractionItem.module.css
@@ -1,5 +1,4 @@
 .attraction {
-  /* background-color: purple; */
   color: var(--color-blue);
   display: flex;
   min-height: 10rem;
@@ -14,6 +13,7 @@
   /* overflow: scroll; */
   /* background-color: #fff; */
   /* margin: auto; */
+  /* background-color: purple; */
 }
 .attraction:hover {
   transform: translateX(-10px);
@@ -92,4 +92,40 @@
   color: var(--color-red);
   padding: 0;
   font-size: 1rem;
+}
+@media only screen and (max-width: 500px) {
+  .attraction {
+    width: 360px;
+    overflow: hidden;
+    height: 120px;
+  }
+  .imgBox {
+    height: 80px;
+    width: 80px;
+  }
+  .imgBox figure {
+    height: 80px;
+    width: 80px;
+  }
+  .contentBox {
+    font-size: 8px;
+  }
+  .meta {
+    font-size: 10px;
+  }
+  .description {
+    font-size: 8px;
+  }
+  .contentBox button {
+    padding: 3px 6px;
+    font-size: 8px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .attraction {
+    width: 290px;
+  }
+  .meta h1 {
+    font-size: 14px;
+  }
 }
