--- a/Client/src/components/MyReviews.module.css
+++ b/Client/src/components/MyReviews.module.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  height: 92vh;
+  min-height: 92vh;
   overflow: scroll;
 }
 .myreviews h1 {
