--- a/Client/src/components/Replies.module.css
+++ b/Client/src/components/Replies.module.css
@@ -1,7 +1,8 @@
 .replies {
   background-color: var(--color-white);
   width: 100%;
-  min-height: 100px;
+  /* min-height: 100px; */
+  height: auto;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
