--- a/Client/src/components/ReviewForm.module.css
+++ b/Client/src/components/ReviewForm.module.css
@@ -51,3 +51,25 @@
   justify-content: center;
   gap: 5%;
 }
+@media only screen and (max-width: 380px) {
+  .form label {
+    font-size: 16px;
+  }
+  .form input {
+    width: 55%;
+    font-size: 10px;
+  }
+  .btns button {
+    font-size: 10px;
+    width: auto;
+  }
+}
+@media only screen and (max-width: 310px) {
+  .form {
+    /* background-color: pink; */
+  }
+  .form label {
+    font-size: 12px;
+    padding-left: 0;
+  }
+}
