--- a/Client/src/components/Reviews.module.css
+++ b/Client/src/components/Reviews.module.css
@@ -11,7 +11,7 @@
   /* this is the new styling */
   background-color: #fff;
   background-color: whitesmoke;
-  height: 92vh;
+  min-height: 94vh;
   overflow: scroll;
   padding: 1rem;
   color: var(--color-black);
@@ -20,6 +20,7 @@
   flex-direction: column;
   align-items: center;
   gap: 7px;
+  /* position: relative; */
   /* overflow: scroll; */
 }
 .addReview {
@@ -30,36 +31,44 @@
   background-color: var(--color-red);
   color: var(--color-white);
   text-transform: capitalize;
-  transition: all 0.3s;
+  /* transition: all 0.3s; */
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   /* position: absolute;
   right: 22%;
   top: 2%; */
   padding: 10px 20px;
+  transform: translate(-60px, -19px);
 }
 .addReview:hover {
   cursor: pointer;
-  transform: translateY(3px);
+  /* transform: translateY(3px); */
 }
 .reviewsIntro {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* background-color: purple; */
   padding: 0;
-  margin: 0.5rem;
+  /* margin: 0.5rem; */
   border-bottom: 1px solid var(--color-black);
-  width: 100%;
+  width: 105%;
   position: absolute;
   top: 7%;
+  /* top: 5%; */
   left: -0.5%;
   z-index: 100;
   background-color: #fff;
+  /* background-color: purple; */
+  transform: translateY(-38px);
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .reviewsIntro p {
   font-size: 1.2rem;
   text-transform: capitalize;
   font-weight: 500;
+  transform: translateY(-19px);
   /* margin-left: 6%; */
 }
 .icon {
@@ -70,9 +79,31 @@
   font-weight: 500;
 }
 .backbtn {
+  /* transform: translateX(20px); */
+  /* transform: translateY(-19px); */
+  transform: translate(20px, -19px);
   cursor: pointer;
-  padding: 2px 20px;
+  padding: 4px 20px;
   border-radius: 5px;
   border: none;
   background-color: var(--color-blue);
+}
+@media only screen and (max-width: 500px) {
+  .reviewsIntro {
+    transform: translateY(-5px);
+    padding: 5px;
+  }
+  .reviewsIntro p {
+    font-size: 12px;
+  }
+  .backbtn {
+    padding: 2px 10px;
+    /* font-size: 10px; */
+    transform: translateX(10px);
+  }
+  .addReview {
+    padding: 5px 10px;
+    font-size: 10px;
+    transform: translateX(-20px);
+  }
 }
