--- a/Client/src/pages/Home.module.css
+++ b/Client/src/pages/Home.module.css
@@ -2,10 +2,12 @@
   padding: 5rem;
   margin: 0;
   height: 92vh;
+  width: 100%;
   /* overflow: hidden; */
   /* background-color: whitesmoke; */
   /* background-image: linear-gradient(125deg, white 0%, var(--color-blue) 50%); */
-  background-color: rgba(26, 115, 232, 0.188);
+  /* background-color: rgba(26, 115, 232, 0.188); */
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
