--- a/Client/src/pages/Login.module.css
+++ b/Client/src/pages/Login.module.css
@@ -1,6 +1,31 @@
+.loginPage {
+}
+.loginAnnimation {
+}
+.parent {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sideImg {
+  height: 400px;
+  width: 400px;
+  overflow: hidden;
+}
+.sideFig {
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+}
+.sidePic {
+  height: 100%;
+  width: 100%;
+}
 .login {
-  width: 60vw;
-  height: 60vh;
+  width: 360px;
+  min-height: 400px;
   margin: 0 auto;
   /* background-color: pink; */
   /* background-color: var(--color-grey-2); */
@@ -8,12 +33,19 @@
   color: var(--color-blue);
   transform: translatey(150px);
   border-radius: 11px;
+  /* background-image: url(../../public/login.jpg); */
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .login h1 {
   text-align: center;
   text-transform: capitalize;
   padding-top: 20px;
   margin-bottom: 20px;
+  color: #fff;
+  color: var(--color-blue);
+  /* border-bottom: 1px solid var(--color-blue); */
 }
 .login form {
   display: flex;
@@ -26,14 +58,20 @@
   width: 80%;
   height: 60px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  /* align-items: center; */
   position: relative;
   /* margin: 0 auto; */
 }
 .login div label {
-  width: 20%;
+  width: 70%;
   font-size: 1rem;
   text-transform: capitalize;
+  /* align-items: flex-start; */
+  align-self: self-start;
+  color: #fff;
+  color: var(--color-blue);
+  /* background-color: pink; */
 }
 .login div input {
   width: 70%;
@@ -51,7 +89,7 @@
   position: absolute;
   font-size: 10px;
   bottom: -25%;
-  left: 30%;
+  left: 15%;
   color: var(--color-red);
   /* transform: translatex(-50%); */
 }
@@ -64,10 +102,13 @@
   text-transform: capitalize;
   border: none;
   border-radius: 7px;
-  color: var(--color-blue);
+  background-color: var(--color-blue);
+  color: #fff;
+  transition: all 0.3s;
 }
 .login form button:hover {
   cursor: pointer;
+  background-color: var(--color-red);
 }
 .login h3 {
   display: block;
@@ -93,4 +134,15 @@ a:active {
 .login a:hover {
   color: var(--color-blue);
   /* border-bottom: 1px solid var(--color-blue); */
+}
+@media only screen and (max-width: 500px) {
+  .login {
+    width: 400px;
+  }
+}
+@media only screen and (max-width: 310px) {
+  .login {
+    width: 280px;
+    transform: translateY(60px);
+  }
 }
