--- a/Client/src/pages/Me.module.css
+++ b/Client/src/pages/Me.module.css
@@ -124,3 +124,16 @@
   color: #fff;
   cursor: pointer;
 }
+@media only screen and (max-width: 320px) {
+  .myDetails {
+    flex-direction: column;
+    background-color: #fff;
+  }
+  .avtar {
+    width: 100vw;
+    /* width: 290px; */
+  }
+  .myInfo {
+    width: 100vw;
+  }
+}
