--- a/Client/src/pages/Signup.module.css
+++ b/Client/src/pages/Signup.module.css
@@ -1,6 +1,6 @@
 .signup {
-  width: 60vw;
-  height: 85vh;
+  width: 360px;
+  min-height: 600px;
   margin: 0 auto;
   /* background-color: pink; */
   transform: translatey(30px);
@@ -26,15 +26,18 @@
   width: 80%;
   height: 60px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   position: relative;
   /* margin: 0 auto; */
 }
 .signup div label {
-  width: 20%;
+  width: 70%;
   font-size: 1rem;
   font-weight: 500;
   text-transform: capitalize;
+  align-self: self-start;
+  /* justify-self: self-start; */
 }
 .signup div input {
   width: 70%;
@@ -51,8 +54,8 @@
 .signup div p {
   position: absolute;
   font-size: 10px;
-  bottom: -25%;
-  left: 28%;
+  bottom: -16%;
+  left: 16%;
   color: var(--color-red);
   /* transform: translatex(-50%); */
 }
@@ -66,7 +69,7 @@
 }
 
 .signup form button {
-  width: 100%;
+  width: 70%;
   height: 40px;
   transition: all 0.3s;
   overflow: hidden;
@@ -74,11 +77,13 @@
   text-transform: capitalize;
   border: none;
   border-radius: 7px;
-  transform: translateY(-30px);
-  color: var(--color-blue);
+  transform: translateY(-20px);
+  background-color: var(--color-blue);
+  color: #fff;
 }
 .signup form button:hover {
   cursor: pointer;
+  background-color: var(--color-red);
 }
 
 .signup a:link,
@@ -97,4 +102,21 @@ a:active {
 .signup a:hover {
   color: var(--color-blue);
   /* border-bottom: 1px solid var(--color-blue); */
+}
+@media only screen and (max-width: 500px) {
+  .signup {
+    width: 400px;
+    height: 550px;
+  }
+  .signup form {
+    gap: 10px;
+  }
+}
+@media only screen and (max-width: 310px) {
+  .signup {
+    width: 280px;
+  }
+  .signup form button {
+    transform: translateY(20px);
+  }
 }
