--- a/Client/src/components/AttractionItem.module.css
+++ b/Client/src/components/AttractionItem.module.css
@@ -82,7 +82,7 @@
   transition: all 0.3s;
   border: 1px solid transparent;
   text-transform: capitalize;
-  margin-top: 0.5rem;
+  /* margin-top: 0.5rem; */
 }
 .contentBox button:hover {
   background-color: var(--color-red);
@@ -92,6 +92,19 @@
   color: var(--color-red);
   padding: 0;
   font-size: 1rem;
+}
+.btns {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  justify-content: flex-end;
+  background-color: #fff;
+}
+.btns button {
+  padding: 5px 10px;
+  width: 70px;
 }
 @media only screen and (max-width: 500px) {
   .attraction {
