--- a/Client/src/components/MyFavs.module.css
+++ b/Client/src/components/MyFavs.module.css
@@ -14,3 +14,20 @@
   width: 80%;
   /* font-size: 1.2rem; */
 }
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.pagination button {
+  padding: 3px 6px;
+  border: none;
+}
+.pagination button:hover {
+  cursor: pointer;
+}
+
+.pagination {
+  color: black;
+}
