--- a/Client/src/components/Liked.module.css
+++ b/Client/src/components/Liked.module.css
@@ -32,5 +32,9 @@
 .pagination {
   color: black;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 360px) {
+  .liked {
+    height: 550px;
+    /* background-color: yellow; */
+  }
 }
