--- a/Client/src/components/ResetPasswordForm.module.css
+++ b/Client/src/components/ResetPasswordForm.module.css
@@ -34,3 +34,12 @@
   color: #fff;
   background-color: var(--color-blue);
 }
+@media only screen and (max-width: 320px) {
+  .form {
+    flex-direction: column;
+  }
+  .form button {
+    margin-top: 5px;
+    margin-right: 10px;
+  }
+}
