--- a/Client/src/components/Popular.module.css
+++ b/Client/src/components/Popular.module.css
@@ -1,5 +1,5 @@
 .popular {
-  height: 92vh;
+  min-height: 92vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,6 +105,7 @@
   font-size: 0.8rem;
   padding: 0 auto;
   color: var(--color-black);
+  text-align: center;
 }
 .chartBtn {
   padding: 8px 16px;
@@ -113,6 +114,9 @@
   border-radius: 7px;
   cursor: pointer;
   border: none;
+}
+.myTags {
+  display: flex;
 }
 @media only screen and (max-width: 500px) {
   .popular {
@@ -127,5 +131,47 @@
   .btnOptions {
     font-size: 10px;
     width: auto;
+  }
+}
+.viewBtn {
+  background-color: var(--color-red);
+  padding: 5px 10px;
+  border: none;
+  color: #fff;
+  border-radius: 7px;
+  text-transform: capitalize;
+  display: block;
+  margin: 5px auto;
+}
+@media only screen and (max-width: 320px) {
+  .popular {
+    width: 295px;
+  }
+  .popular p {
+    font-size: 12px;
+    text-align: center;
+  }
+  .attractionsName {
+    width: 295px;
+    gap: 10px;
+    justify-content: center;
+    background-color: #fff;
+  }
+  .attraction {
+    width: 290px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+  .attraction figure {
+    height: 120px;
+    width: 240px;
+  }
+  .attractionIntro h1 {
+    text-align: center;
+  }
+  .attractionIntro {
+    text-align: center;
   }
 }
