fixed the major bugs and did alright with the design and msg from backend  almost ready to deploy finally :)

--- a/Client/src/components/Map.module.css
+++ b/Client/src/components/Map.module.css
@@ -73,6 +73,7 @@
   font-size: 1rem;
   height: 200px;
   width: 200px;
+  /* color: red; */
   /* not working for some reason */
 }
 :global(.leaflet-marker-icon) {
@@ -96,7 +97,17 @@
 .tolink:link,
 .tolink:visited {
   text-decoration: none;
+  /* background-color: red; */
 }
 .tolink:hover,
 .tolink:active {
 }
+/* .attractionCountDiv {
+  width: 120px;
+  height: 50px;
+}
+.checkbtn {
+  width: 50px;
+  height: 20px;
+  background-color: yellow;
+} */
