--- a/Client/src/pages/Login.module.css
+++ b/Client/src/pages/Login.module.css
@@ -1,9 +1,11 @@
 .loginPage {
+  /* height: 600px; */
 }
 .loginAnnimation {
 }
 .parent {
   height: 100%;
+  /* height: 600px; */
   width: 100%;
   display: flex;
   align-items: center;
@@ -25,7 +27,7 @@
 }
 .login {
   width: 360px;
-  min-height: 400px;
+  min-height: 500px;
   margin: 0 auto;
   /* background-color: pink; */
   /* background-color: var(--color-grey-2); */
@@ -135,12 +137,29 @@ a:active {
   color: var(--color-blue);
   /* border-bottom: 1px solid var(--color-blue); */
 }
+.mybtns {
+  display: block;
+  width: 200px;
+  margin: 0 auto;
+  padding: 8px 18px;
+  background-color: var(--color-blue);
+  color: #fff;
+  border: none;
+  border-radius: 9px;
+  transition: all 0.3s;
+  margin-top: 5px;
+  text-transform: capitalize;
+}
+.mybtns:hover {
+  cursor: pointer;
+  background-color: var(--color-red);
+}
 @media only screen and (max-width: 500px) {
   .login {
     width: 400px;
   }
 }
-@media only screen and (max-width: 310px) {
+@media only screen and (max-width: 370px) {
   .login {
     width: 280px;
     transform: translateY(60px);
