--- a/Client/src/pages/Travel.module.css
+++ b/Client/src/pages/Travel.module.css
@@ -108,6 +108,7 @@
 }
 
 :global(.leaflet-popup-content div) {
+  /* background-color: red; */
   /* font-size: 0.6rem; */
 }
 :global(.leaflet-popup-tip) {
