--- a/Client/src/components/AttractionDetails.module.css
+++ b/Client/src/components/AttractionDetails.module.css
@@ -82,7 +82,7 @@
     width: 70px;
   }
 }
-@media only screen and (max-width: 310px) {
+@media only screen and (max-width: 320px) {
   .attractionIntro {
   }
   .description {
@@ -92,6 +92,9 @@
     /* background-color: pink; */
     /* padding: 3px; */
     gap: 5px;
+  }
+  .name {
+    font-size: 12px;
   }
   /* .icon {
     height: 12px;
