--- a/Client/src/components/CityDetails.module.css
+++ b/Client/src/components/CityDetails.module.css
@@ -143,3 +143,15 @@
     width: 100%;
   }
 }
+@media only screen and (max-width: 500px) {
+  .heading {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .backbtn {
+    padding: 4px 10px;
+    font-size: 12px;
+    transform: translateY(-5px);
+  }
+}
