--- a/Client/src/components/Notes.module.css
+++ b/Client/src/components/Notes.module.css
@@ -33,3 +33,8 @@
   background-color: var(--color-blue);
   color: white;
 }
+@media only screen and (max-width: 320px) {
+  .form div button {
+    font-size: 12px;
+  }
+}
