--- a/Client/src/components/UpdateReviewForm.module.css
+++ b/Client/src/components/UpdateReviewForm.module.css
@@ -31,11 +31,13 @@
   width: 30%;
   transition: all 0.3s;
   border: none;
+  background-color: var(--color-blue);
+  color: white;
   border-radius: var(--border-radius-sm);
 }
 .creatbtn:hover {
   cursor: pointer;
-  background-color: var(--color-blue);
+  background-color: var(--color-red);
   color: white;
 }
 .btns {
@@ -44,7 +46,7 @@
   justify-content: center;
   gap: 5%;
 }
-@media only screen and (max-width: 310px) {
+@media only screen and (max-width: 370px) {
   .form label {
     font-size: 10px;
   }
@@ -53,5 +55,9 @@
   }
   .creatbtn {
     font-size: 8px;
+  }
+  .form div input {
+    width: 100px;
+    padding: 5px 10px;
   }
 }
