--- a/Client/src/pages/Verify.module.css
+++ b/Client/src/pages/Verify.module.css
@@ -73,4 +73,15 @@ label {
 }
 .otpReminder {
   color: red;
+  font-size: 10px;
+}
+@media only screen and (max-width: 370px) {
+  .submitButton,
+  .toggleButton {
+    width: 200px;
+    font-size: 12px;
+  }
+  .container {
+    width: 280px;
+  }
 }
